test/compilable/parse2659.d
// REQUIRED_ARGS: -w

void test2659()
{
    for (int i = 0; i < 10; i++, i++) { }
}
